# AWS-ML-Foundations

./: README.md
Intro to OOP/Completed Exercise 1/: shirt_exercise_SOLVED.ipynb
Intro to OOP/Completed Exercise 1/.ipynb_checkpoints/: shirt_exercise_SOLVED-checkpoint.ipynb
Intro to OOP/Completed Exercise 10/: README.md
Intro to OOP/Completed Exercise 10/5_exercise_upload_to_pypi/: README.md  setup.cfg  setup.py
Intro to OOP/Completed Exercise 10/5_exercise_upload_to_pypi/wawerudist.egg-info/: PKG-INFO  SOURCES.txt
Intro to OOP/Completed Exercise 2/: exercise_SOLVED.ipynb
Intro to OOP/Completed Exercise 2/.ipynb_checkpoints/: exercise_SOLVED-checkpoint.ipynb
Intro to OOP/Completed Exercise 3/: gaussian_class_exercise.ipynb
Intro to OOP/Completed Exercise 3/.ipynb_checkpoints/: gaussian_class_exercise-checkpoint.ipynb
Intro to OOP/Completed Exercise 4/: magic_methods.ipynb
Intro to OOP/Completed Exercise 4/.ipynb_checkpoints/: magic_methods-checkpoint.ipynb
Intro to OOP/Completed Exercise 5/: inheritance-clothing.ipynb
Intro to OOP/Completed Exercise 6/: demo-inheritance-distribution.ipynb
Intro to OOP/Completed Exercise 7/: example_code.py
Intro to OOP/Completed Exercise 8/: readme.txt
Intro to OOP/Completed Exercise 9/: README.md
Software Eng I/Efficient Code/: optimizing_code_common_books.ipynb  optimizing_code_common_books_example.ipynb
Software Eng I/Modular Code/: refactor_wine_quality.ipynb
Software Eng I/Optimizing/: README.md  gift_costs.txt  optimizing_code_holiday_gifts.ipynb
Software Eng II/Unit Test/: compute_launch.py
(+11 files in other folders)
