[metadata]
name = wawerudist
version = 1.0.0
author = Waweru Kennedy
author_email = kennedywaweru17@gmail.com
description = A simple Python package for computing Gaussian and Binomial distributions
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/wawerukennedy/ML_FOUNDATIONS
project_urls =
    repository = https://github.com/wawerukennedy/ML_FOUNDATIONS
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires = matplotlib

[options.packages.find]
where = distributions